--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
-    background-color: #fff8da;
+    background-color: yellow;
     border-radius: 4px;
     border: 1px solid black;
     font-family: 'Mali', cursive;
